# CFFG_robot

./: .flake8  .gitignore  .gitmodules  FLOW_VS_RSLRL_AC_COMPARISON.md  PRETRAIN_FLOW_BC_ANALYSIS.md  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
class_free_guide/algorithm/: __init__.py  interpolation.py  log_prob.py  sdf.py
class_free_guide/cost_manager/: collision_cost.py  cost_base.py
class_free_guide/network/2D/: height_map_cnn.py
class_free_guide/network/action_head/: cross_attention_dit.py  flow_matching_action_head.py  model_registry.py  state_action_attention.py  state_action_roller.py
class_free_guide/network/action_head/utils/: rolling_input.py  utils.py
class_free_guide/network/base/: activate.py  label_linear.py  mlp.py  norm.py  operator.py
class_free_guide/network/base/cnn/: __init__.py  conv2d.py
class_free_guide/network/base/dit_block/: dit_block_cross_attention.py  dit_cross_attention.py  dit_ln_attention.py  dit_ln_self_attention.py
class_free_guide/network/base/transformer_block/: attention.py  cond_inject_cross_attention.py  cross_attention.py  cross_transformer.py  self_attention.py  self_transformer.py
class_free_guide/network/base/vae_block/: mlp_vae.py
class_free_guide/network/nosise_gen/: log_noise_nn.py
class_free_guide/network/ssm/: mamba3.py
class_free_guide/network/utils/: deprecate.py  utils.py
class_free_guide/pineline/flow_matching/: flow_cfg.py  flow_control.py  flow_matching_base.py  flow_multimodal.py
class_free_guide/pineline/guidance/: guidance.py
class_free_guide/pineline/rl/rsl_rl/: __init__.py
class_free_guide/pineline/rl/script/: list_envs.py  train.py  train_fpo.py
class_free_guide/robots/: model.py
class_free_guide/robots/go2/: go2.xml
class_free_guide/robots/go_b/: CMakeLists.txt  package.xml
class_free_guide/supervisor/: __init__.py  config.py  guardrails.py  interfaces.py  llm_client.py  metric_collector.py  objective.py  patcher.py  prompts.py  safety.py  schema.py  skill_memory.py  supervisor.py  test_supervisor_offline.py  video_sampler.py
class_free_guide/supervisor/config/: schema.yaml  supervisor.yaml
class_free_guide/supervisor/doc/: menu.md  schema_guide.md  supervisor_config_guide.md
class_free_guide/supervisor/objectives/: energy_efficient.json  fast_walk.json  stable_walk.json
class_free_guide/supervisor/skill/: SKILL.md
class_free_guide/test/: attention_block_test.py  flow_matching_base_test.py  mamba3_test.py
docker/: Dockerfile  build.sh
three_party/mamba_selective_scan/: LICENSE  README.md  pyproject.toml  setup.py
three_party/mamba_selective_scan/mamba_selective_scan/: __init__.py  ops.py
(+49 files in other folders)
