[build-system]
requires = ["setuptools", "toml"]
build-backend = "setuptools.build_meta"

[tool.isort]
atomic = true
profile = "black"
line_length = 150
py_version = 311
skip_glob = ["docs/*", "logs/*"]
group_by_package = true
dependencies = [
  "prettytable",
  "tqdm",
  "tyro>=1.0.1",
  "torch>=2.7.0",
  "torchrunx>=0.3.4",
  "warp-lang>=1.14.0",
  "mujoco-warp>=3.9.0.1,~=3.9.0",
  "mujoco~=3.8.0",
  "trimesh>=4.8.3",
  "scipy>=1.15",
  "viser>=1.0.27",
  "mjviser>=0.0.14",
  "mediapy>=1.2.6",
  "imageio-ffmpeg",
  "tensordict",
  "rsl-rl-lib>=5.4.0",
  "tensorboard>=2.20.0",
  "onnxscript>=0.5.4",
  "wandb>=0.22.3",
]
exclude = [
    "**/__pycache__",
    "**/docs",
    "**/logs",
    ".git",
    ".vscode",
]

extraPaths = [    
    "/home/zwc/anaconda3/envs/g1/lib/python3.11/site-packages/",
    "/home/zwc/class_free_guide/three_party/mamba_selective_scan/",
]

typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true

[tool.black]
line-length = 150
target-version = ["py311"]