# biubushy | 2026-01

[build-system]
requires = ["setuptools>=64", "wheel", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba_selective_scan"
version = "0.1.0"
description = "Extracted high-performance CUDA implementation of Selective Scan from Mamba"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "biubushy"},
]
dependencies = [
    "torch>=2.0",
    "einops",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Original Source" = "https://github.com/state-spaces/mamba"

[tool.setuptools.packages.find]
include = ["mamba_selective_scan*"]
